# CNC_machine_Proj

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  main_window.py  svg_parser.py
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
docs/: GCODE_MODULE.md  system_state_README.md
driver/: Makefile  main.c
examples/: example_usage.c  hal_mock.c
software/: streaming.py
src/: arc.c  arc.h  gcode.c  gcode.h  grbl.h  parser.c  planner.c  planner.h  protocol.c  stepper.c  stepper.h  system_state.c  system_state.h
test/: Makefile  gcode_test.c  input_test.c  planner_test.c  stepper_test.c  system_state_test.c
